--- a/squid-classic/squid-icap-noauth.conf
+++ b/squid-classic/squid-icap-noauth.conf
@@ -51,8 +51,8 @@ refresh_pattern  . 0 20% 4320
 
 icap_enable on
 
-icap_service service_req reqmod_precache bypass=1 icap://127.0.0.1:1344/request
+icap_service service_req reqmod_precache bypass=1 icap://python-icap-server:13440/request
 adaptation_access service_req allow all
 
-icap_service service_resp respmod_precache bypass=0 icap://127.0.0.1:1344/response
+icap_service service_resp respmod_precache bypass=0 icap://python-icap-server:13440/response
 adaptation_access service_resp allow all
